# MyProjects

./: .gitignore  LICENSE  README.md
Batch/: README.md
Batch/Automation/: Backup_Automation_Suite.bat  Startup_Optimizer.bat  System_Cleaner_Pro.bat  Task_Scheduler_Manager.bat  WiFi_Password_Viewer.bat
Batch/FileManagement/: Batch_Rename_Tool.bat  Directory_Analyzer.bat  Duplicate_File_Hunter.bat  File_Synchronizer.bat  Secure_File_Shredder.bat
Batch/NetworkTools/: DNS_Resolver_Tool.bat  Firewall_Manager.bat  Network_Connection_Scanner.bat  Network_Traffic_Monitor.bat  Port_Scanner_Advanced.bat
Batch/SystemTools/: Event_Log_Analyzer.bat  Hardware_Monitor.bat  Process_Manager_Advanced.bat  Service_Controller.bat  System_Diagnostics_Analyzer.bat
C#/AutoClicker/: App.xaml  App.xaml.cs  AutoClicker.csproj  MainWindow.xaml.cs
C++/: README.md
C++/FileEncryptionTool/: BUILD_INSTRUCTIONS.md  CMakeLists.txt  README.md  aes.h  main.cpp  sha256.h
C++/MemoryMonitor/: CMakeLists.txt  README.md  main.cpp
C++/NetworkOptimizer/: .gitignore  README_TESTING.md  WHATS_NEW.md
Java/LogParser/: Manifest.txt  README.md
PowerShell/: README.md
PowerShell/SystemAutomation/: Lazy-Organizer.ps1  Net-Fixer.ps1  README.md  Wifi-Revealer.ps1
Python/: MCIGN_Scan_and_Snipe.py  README.md
Python/BandwidthMonitor/: bandwidth_monitor.py
Python/ClipSync/: ClipSync.py  README.md
Python/DuplicateHunter/: DuplicateHunter.py  README.md
Python/FocusCLI/: FocusCLI.py  README.md
Python/GoDark/: GoDark.py  README.md
Python/LinkRotFinder/: LinkRotFinder.py  README.md
(+38 files in other folders)
